@@ -963,3 +963,4 @@ Added a Module Config option in the advanced section to change the path for the 
 Third-party content styles can now be deleted by the master admin from the Content Styles page.
 Added the --default-ip flag to modify-domain.pl, to revert to a shared IP address.
 Custom links can be limited to virtual servers with a specific template if you have any custom templates defined, for more control over when each link is displayed.
+Backups now include any custom template used to create virtual servers, which allow domains to be restored even on systems that do not yet have the original templates.
